Set up token retrieval using rest_framework_simplejwt. Implemented endpoints for obtaining and refreshing token for registered users

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
     "./music_playlist_api" 
   ],
   "python.envFile": "${workspaceFolder}/.env",
-  "python.analysis.typeCheckingMode": "basic"
+  "python.analysis.typeCheckingMode": "basic",
+  
 }
+
+
+  
+  
